# multi-auth

./: Cargo.toml
migrations/: 20240115224114_create_users_table.sql  20240117164251_create_roles_tanle.sql
src/: users.rs
src/web/: app.rs  oauth.rs
