[package]
name = "example-multi-auth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["serde_json"] }
axum = { version = "0.7.1", features = ["macros"] }
axum-flash = "0.8.0"
dotenvy = "0.15.7"
fred = "7.1.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls","time","uuid"] }
time = { version = "0.3.30", features = ["serde","macros","formatting"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
axum-login = "0.12.0"
tower = "0.4.13"
tower-sessions = { version = "0.9.1", features = ["redis-store"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
password-auth = "1.0.0"
reqwest = { version = "0.11.23", features = ["json"] }
http = "1.0.0"
oauth2 = "4.4.2"
thiserror = "1.0.56"
